# ToyCAD

./: CMakeLists.txt  README.md
cmake/: predicates.cmake  triangle.cmake
src/: CMakeLists.txt  color.cpp  color.h  curvecollector.cpp  curvecollector.h  glcanvas.cpp  glcanvas.h  grid.cpp  grid.h  meshedge.ui  meshface.ui  myapp.cpp  myapp.h  myapp.qrc  myapp.ui  mymodel.cpp  mymodel.h  point.cpp  point.h  region.cpp  region.h  snapgrid.ui  ui_meshface.h  ui_myapp.h
src/GeneratedFiles/: qrc_myapp.cpp  ui_meshedge.h  ui_snapgrid.h
src/GeneratedFiles/Debug/: moc_glcanvas.cpp  moc_myapp.cpp
src/compgeom/: CMakeLists.txt  compgeom.cpp  compgeom.h  point.h  predicates.c  predicates.h  tesselation.cpp  tesselation.h
src/curves/: CMakeLists.txt  circle.cpp  circle.h  circlearc.cpp  circlearc.h  cubicbezier.cpp  cubicbezier.h  curve.cpp  curve.h  line.cpp  line.h  polyline.cpp  polyline.h  quadbezier.cpp  quadbezier.h
src/mesh/: CMakeLists.txt  delaunay.cpp  delaunay.h  mesh.cpp  mesh.h  meshgenerator.h  transfinbilinear.cpp  transfinbilinear.h  transfintriilinear.cpp  transfintrilinear.h  triangle.c  triangle.h
